updated template to populate profile year from posted json

--- a/templates/town_profile.html
+++ b/templates/town_profile.html
@@ -25,7 +25,7 @@ Town Profile{% if config["town"] -%} - {{ config["town"] }}{% endif -%}
         Connecticut
     </h1>
     <h2>
-        CERC Town Profile {{ info["current_year"] }}
+        CERC Town Profile {{ info['profile_year'] }}
         <span class="attribution">Produced by The CT Data Collaborative</span>
     </h2>
     {% if info["address"] -%}
