--- a/static/styles/town_profile.css
+++ b/static/styles/town_profile.css
@@ -100,6 +100,10 @@ ul.header_list {
     margin: 0;
 }
 
+ul.header_list.belongs_to {
+    padding-bottom: 8px;
+}
+
 div.anchor {
     clear: both;
 }
