--- a/templates/town_profile.html
+++ b/templates/town_profile.html
@@ -36,7 +36,7 @@ Town Profile{% if config["town"] -%} - {{ config["town"] }}{% endif -%}
         </ul>
     {% endif -%}
     {% if info["belongs_to"] -%}
-        <ul class="header_list">
+        <ul class="header_list belongs_to">
             <li><i>Belongs To</i></li>
             {% for item in info["belongs_to"] -%}
             <li>{{ item }}</li>
@@ -54,7 +54,7 @@ Town Profile{% if config["town"] -%} - {{ config["town"] }}{% endif -%}
     <h3 class="section_header">Demographics</h3>
     <div id="population" class="vis_container left">
         {% if objects["population"] -%}
-        <h4>Population{% if info["years"]["population"] %} ({{info["years"]["population"]}}){% endif %}</h4>
+        <h4>Population</h4>
         {{ objects["population"]["output"] | safe }}
         {% endif -%}
     </div>
