style tweakng to push down header

--- a/static/styles/town_profile.css
+++ b/static/styles/town_profile.css
@@ -188,6 +188,9 @@ table {
 #enrollment {
     min-height: 60pt;
 }
+.container--demographics {
+    margin-top: 2rem;
+}
 div.vis_container > img {
     display: block;
     margin: auto;
