--- a/templates/town_profile.html
+++ b/templates/town_profile.html
@@ -50,7 +50,7 @@ Town Profile{% if config["town"] -%} - {{ config["town"] }}{% endif -%}
     </div>
     {% endif %}
 </div>
-<div class="container first-container">
+<div class="container first-container container--demographics">
     <h3 class="section_header">Demographics</h3>
     <div id="population" class="vis_container left">
         {% if objects["population"] -%}
